[tool.poetry]
name = "looker-catalog-export"
version = "0.1.0"
description = ""
authors = ["centsys-stoba <s.toba@centsys.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
looker-sdk = "^24.18.1"
fastavro = "^1.9.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
